# Agent-Vortex

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.py  config.yaml  docker-compose.yml  main.py  pyproject.toml  schemas.py  state.py
.playwright-mcp/: page-2026-06-02T09-25-23-992Z.yml  page-2026-06-02T09-25-32-080Z.yml  page-2026-06-02T09-25-34-018Z.yml  page-2026-06-02T09-25-42-818Z.yml  page-2026-06-02T09-29-34-884Z.yml  page-2026-06-02T10-04-23-215Z.yml  page-2026-07-21T15-17-10-276Z.yml  page-2026-07-21T15-17-13-867Z.yml  page-2026-07-21T15-17-29-386Z.yml
core_setup/: bootstrap.py  checkpointer.py  google_auth_check.py  google_service.py  llm.py  mcp_client.py  setup_google.py  tools.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
mcp-whatsapp/: .dockerignore  Dockerfile
mcp-whatsapp/internal/daemon/: server.go
memory/: conversations.py  title_generator.py
memory/ltm/: context.py  extractor.py  retrieval.py  schemas.py  service.py  store.py  store_memory.py
nodes/: approval.py  builder.py  executor.py  planner.py  risk.py
tools/: browser_interaction.py  browser_navigate.py  browser_read.py  browser_tabs.py  calendar_read.py  calendar_write.py  generate_excel.py  generate_pdf.py  gmail_read.py  gmail_send.py  terminal_tool.py  whatsapp_tool.py
