[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastmcp>=3.3.1",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-experimental>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-litellm>=0.6.6",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-postgres>=3.1.0",
    "litellm>=1.87.0",
    "openpyxl>=3.1.5",
    "orjson>=3.11.9",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.50",
    "tenacity>=9.1.4",
    "typer>=0.26.5",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
